--- a/app/client/index.html
+++ b/app/client/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Webpack в React</title>
+    <title>ToDoDuck Online</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">  
+    <link rel="stylesheet" type="text/css" href="./app/client/app.css">
 </head>
 <body>
     <div id="app"></div>
